Cut translations to only those used

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<div id="loadingSound" class="music-box__modal">
 		<div class="music-box__modal__message">
-			<div id="loadingMessage" class="music-box__modal__message__text">Flute</div>
+			<div id="loadingMessage" data-name="Spectrogram_Loading_Message" class="music-box__modal__message__text">Loading</div>
 			<svg class="spinner" width="55px" height="55px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
 			<circle class="circle" fill="none" stroke-width="3" stroke-linecap="round" cx="33" cy="33" r="30">
 			</circle>
