--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<canvas id="spectrogram"></canvas>
 	<canvas id="legend"></canvas>
 
-	<div id="iosButton" data-name="iOS_Button">Tap anywhere to start</div>
+	<div id="iosButton" class="hide" data-name="iOS_Button">Tap anywhere to start</div>
 
 	<div id="record" class="music-box__modal">
 		<div class="music-box__modal__message">
